# openwave

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OBJECTS.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES  THIRD_PARTY_NOTICES  TRADEMARK  WAVE_EQUATIONS.md  WELCOME.md  imgui.ini  pyproject.toml
.github/: FUNDING.yml
dev_docs/: CODING_STANDARDS.md  COORDINATE_SYSTEM.md  FLOATING_POINT_PRECISION.md  LOOP_OPTIMIZATION.md  MARKDOWN_STYLE_GUIDE.md  PERFORMANCE_GUIDELINES.md  SCALING_FACTOR.md  Taichi_vs_Warp.md  VERSION_MANAGEMENT.md  WAVE_DIAGNOSTICS.md  WAVE_DIAGNOSTICS_README.md
dev_docs/RESEARCH_LEVEL1/: 00_LEVEL1_PLAN.md  01a_WAVE_FIELD_grid.md  01b_WAVE_FIELD_properties.md  02_WAVE_ENGINE.md  02a_WAVE_ENGINE_charge.md  02b_WAVE_ENGINE_propagate.md  02c_WAVE_ENGINE_interact.md  03_FUNDAMENTAL_PARTICLE.md  04_FORCE_MOTION.md  07_VISUALIZATION.md  10_STABILITY_ANALYSIS.md  11_flux_films.md  11_flux_mesh.md  11_plane_slices.md  12_stable_charging.md  12_wave_center.md  13_spin_theory.md  13_wave_center.md  14_spin_theory.md  15_theking.md
dev_docs/distributed_computing/: distributed_architecture_plan.md  distributed_architecture_strategy.md  m4_max_vs_aws.md  performance_test.py  single_node_upgrade_options.md  system_upgrade_options.md
dev_sandbox/: README.md
dev_sandbox/CPU_vs_GPU/: profile_quantum_space.py  profile_rendering.py
dev_sandbox/render_tests/: qspace_render_coordinates.py
dev_sandbox/spacetime/: quantum_space_2dslider.py  quantum_space_2dslider_optimized.py
dev_sandbox/spacetime_tests/: qspace_2dslider.py  qspace_2dslider_optimized.py  qspace_ggui_4classes.py  qspace_gui.py  qspace_gui_profiler.py  qspace_slice_block.py  qspace_sliceradius.py  qspace_sphere.py
dev_sandbox/universe_shape_tests/: performance_analysis.py  performance_comparison.py  qspace_sphere.py
docs/: Makefile  README.md  architecture.rst  build_docs.sh  changelog.rst  conf.py  contributing.rst  generate_deps.py  getting_started.rst  index.rst  installation.rst  license.rst  physics_guide.rst  references.rst  requirements.txt  usage.rst  xperiments.rst
docs/_static/: custom.css  import_map.json
docs/api/: modules.rst  openwave._io.cli.rst  openwave._io.render.rst  openwave._io.rst  openwave.common.config.rst  openwave.common.constants.rst  openwave.common.equations.rst  openwave.common.rst  openwave.core.config.rst  openwave.core.constants.rst  openwave.core.equations.rst  openwave.core.rst  openwave.force.electric.rst  openwave.force.gravitational.rst  openwave.force.magnetic.rst  openwave.force.orbital.rst  openwave.force.rst  openwave.force.strong.rst  openwave.heat.heat.rst  openwave.heat.rst  openwave.matter.atom.rst  openwave.matter.composite_particle.rst  openwave.matter.fundamental_particle.rst  openwave.matter.molecule.rst  openwave.matter.rst  openwave.matter.standalone_particle.rst  openwave.motion.motion.rst  openwave.motion.rst  openwave.photon.light.rst  (+55 more)
openwave/: WAVE_EQUATIONS.md  __init__.py  config.ini  config.py  constants.py  equations.py  matter.py  quantum_space.py  quantum_wave.py  space.py  wave_guide.md  wave_notation.md
planning/: week_2025-08-04.md  week_2025-08-11.md  week_2025-08-25.md
ship_log/: week_2025-08-04.md  week_2025-08-11.md  week_2025-08-18.md  week_2025-08-25.md  week_2025-09-01.md  week_2025-09-08.md  week_2025-09-15.md  week_2025-09-22.md  week_2025-09-29.md  week_2025-10-06.md  week_2025-10-13.md  week_2025-10-20.md
ships_log/: week_2025-08-25.md  week_2025-09-01.md
(+785 files in other folders)
