[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "openwave"
version = "0.1.0"
requires-python = ">=3.12"

description = "Simulates matter and energy formation using Energy Wave Theory"
readme = "README.md"
keywords = [
  "Energy Wave Theory", "Quantum Simulation", "Quantum Mechanics",
  "Matter Formation", "Energy Formation", "Physics Simulation"
]

license = { text = "MIT" }
authors = [
  { name = "Rodrigo Griesi", email = "hello@openwaveHQ.com" },
  { name = "Jeff Yee",     email = "hello@openwaveHQ.com" }
]

dependencies = [
  "numpy>=2.3,<3.0",
  "scipy>=1.11,<2.0",
  "matplotlib>=3.8,<4.0",
  "taichi>=1.6,<2.0"
]

[project.urls]
Homepage = "https://github.com/openwaveHQ/openwave"
Issues = "https://github.com/openwaveHQ/openwave/issues"

[tool.setuptools.packages.find]
include = ["openwave", "openwave.*"]

[tool.setuptools.package-data]
openwave = [
    "README.md",
    "LICENSE",
]
