[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "OPENWAVE"
version = "0.1.0"
requires-python = ">=3.12"

description = "Simulates matter and energy formation using Energy Wave Theory"
readme = "README.md"
keywords = [
  "Energy Wave Theory", "Quantum Simulation", "Quantum Mechanics",
  "Matter Formation", "Energy Formation", "Physics Simulation"
]

license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Rodrigo Griesi", email = "hello@openwavelabs.com" },
  { name = "Jeff Yee",     email = "hello@openwavelabs.com" }
]

dependencies = [
  "numpy>=2.3,<3.0",
  "scipy>=1.11,<2.0",
  "matplotlib>=3.8,<4.0",
  "taichi>=1.6,<2.0",
  "pyautogui>=0.9,<1.0"
]

[project.urls]
Homepage = "https://github.com/openwave-labs/openwave"
Issues = "https://github.com/openwave-labs/openwave/issues"

[tool.setuptools.packages.find]
include = ["openwave", "openwave.*"]

[tool.setuptools.package-data]
openwave = [
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 99